# hole-clawer

./: .gitignore  README.md  app.py  config.ini  pyproject.toml  requirements.txt
hole/: __init__.py  error_detact.py  fillin_list.py  get_comment.py  parse_data.py
log/: logging.conf
tests/: test_hole.py
