[tool.poetry]
name = "hole"
version = "0.2.0"
description = ""
authors = ["Ernest DONG <dongcy2000@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
requests = "^2.27.1"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
